[project]
name = "tracking-data-exporter"
version = "0.1.0"
description = "Gather weekly tracking data from multiple sources for life coach LLM upload"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "google-auth>=2.0",
    "requests>=2.0",
]

[project.scripts]
export-data = "exporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exporter"]
